# alpha_vantage

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alpha_vantage_monitor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: alerts.py  health.py  market.py  watchlist.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/jobs/: alert_evaluator.py
backend/app/models/: __init__.py  alert.py  quote_snapshot.py  user.py  watchlist.py
backend/app/providers/: alpha_vantage.py  base.py  factory.py  fallback.py  mock.py  yahoo_chart.py  yfinance_provider.py
backend/app/schemas/: alert.py  health.py  market.py  watchlist.py
backend/app/services/: alert_service.py  market_data.py  users.py  watchlist_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py
backend/tests/: test_health.py  test_market_data.py
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/src/: app.dart
mobile/lib/src/config/: app_config.dart
mobile/lib/src/core/network/: api_client.dart
mobile/lib/src/core/theme/: app_theme.dart
mobile/test/: widget_test.dart
scripts/: dev-backend.ps1  dev-mobile.ps1
(+10 files in other folders)
