[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-vantage-monitor-backend"
version = "0.1.0"
description = "Backend API for a cross-platform stock monitoring app."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.34",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
